# openconstruct-catalog

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: lib.rs
tests/: integration_test.rs
