[package]
name = "openconstruct-catalog"
version = "0.1.0"
edition = "2021"
description = "Tech catalog and module discovery system for openConstruct — discover, install, and remove tech modules"
license = "MIT"
repository = "https://github.com/SuperInstance/openconstruct-catalog"
keywords = ["openconstruct", "catalog", "package-manager", "modules"]
categories = ["data-structures", "development-tools"]

[dependencies]
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
